[project]
name = "who-calls"
version = "0.2.0"
description = "Static caller-tree explorer for Python code"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "networkx>=3.0",
]

authors = [
    {name = "JeyBee", email = "janbjorge@gmail.com"}
]

license = {text = "MIT"}

[project.scripts]
# CLI entry-point
who-calls = "who_calls.cli:main"

[build-system]
requires = [
    "hatchling>=1.24"  # real backend, pulled in automatically by uv
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include package directory
packages = [
    "who_calls"
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0"
]
